# md-to-html

./: CHANGELOG.md  LICENSE  input.md  md-to-html.cabal  md2html.cabal  output.html
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: CLI.hs  MdParser.hs  Parser.hs  ToHTML.hs
