cabal-version:      3.0
name:               md2html
description:        A simple command-line tool to convert Markdown files to HTML. Made to teach Haskell.
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Robertino Martinez
maintainer:         robertino.martinez@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable md2html
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    CLI
                      MdParser
                      ToHTML

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.3.0
                    , optparse-applicative
                    , text
                    , megaparsec

    -- Directories containing source files.
    hs-source-dirs:   app
                    , src

    -- Base language which the package is written in.
    default-language: Haskell2010
